make scoreboard equal dimensions to gameboard to prevent content shifting when game is completed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,6 +201,7 @@ li{
 
 #scoreboard{
     
+    height: 80vmin;
     color: #222;
     background-color: #f5f5f5;
     border: 3px solid #555;
